# job-parser-bot

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  run.py
bot/: __init__.py  app.py
bot/handlers/: __init__.py
bot/services/: __init__.py  scraper_job.py
database/: __init__.py  models.py  session.py
scrapers/: __init__.py  base.py  curl_base.py  djinni.py  dou.py  robota_ua.py  work_ua.py
tests/: conftest.py  test_scrapers.py
tests/fixtures/: djinni_jobs.html  dou_jobs.html  robota_ua_jobs.html  work_ua_jobs.html
